feat(servicos): o item que nao e mercadoria (bloco S1, V085/V086)
Primeiro bloco do modulo de servicos (docs/MODULOSERVICOS.md), que cobre a
petshop (banho e tosa) e a oficina (mao de obra). Decisao P1 do dono do
produto em 2026-08-28: "por padrao o modulo de servico vai precisar ligar
ele pra funcionar, pois as empresas de servico sao menos que as de
comercio" -- entao cfg_usa_servicos nasce DESLIGADO.

Modelagem (DS1): produto.tipo_item + extensao 1:1 produto_servico, NAO uma
tabela separada. A razao esta no schema: a venda nao tem tabela de itens --
o item da venda E a linha do ledger de estoque, e 33 arquivos Java leem de
la (DRE, Lucratividade, Comissoes, Relatorio de Vendas, papeleta, historico
do cliente, CRM, montador da NFC-e). Item que nao gera linha no ledger nao
existe para nenhum deles, em silencio.

- V085: tipo_item em produto e (denormalizado) em produto_barra; a tabela
  produto_servico com duracao e comissao propria; cfg_usa_servicos.
  O tipo e IMUTAVEL depois de criado -- trocar deixaria produto_estoque com
  saldo de algo sem saldo e a NFC-e de ontem descrevendo mercadoria que hoje
  e mao de obra, tudo sem erro.
- V086: o curto-circuito na trigger de estoque, nos TRES ramos. So o INSERT
  deixaria o DELETE de um item de servico de venda cancelada CREDITAR
  estoque. A regra mora na trigger e nao nos servicos Java pelo mesmo motivo
  da V054: sao oito rotinas mexendo em estoque, e espalhar garante que uma
  fique de fora.
- Custo no caminho quente: zero consulta nova -- o tipo vem da coluna
  denormalizada, que existe exatamente para isso.

Achado testando ao vivo, nao previsto na spec: num tenant com cor/grade
ligada (a petshop que tambem vende racao em tamanhos), cadastrar servico era
recusado com "Grade e obrigatoria", mandando o operador procurar uma curva
de tamanhos para um banho de cachorro. Servico nao tem grade.

Medido antes de escrever a V085: produto, produto_barra e cfg_geral tem ACL
de TABELA, entao coluna nova nasce acessivel -- o